Update to personal data

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>My first web page</title>
     <style>
         img {
-            width: 700px;
-            border-radius: 100px;
+            width: 246px;
+            border-radius: 50px;
             float: left;
             margin-right: 50px;
         }
@@ -16,11 +16,11 @@
         }
 
         h1 {
-            font-size: 40px;
+            font-size: 35px;
         }
 
         h2 {
-            font-size: 30px;
+            font-size: 25px;
         }
 
         p {
@@ -30,14 +30,12 @@
 </head>
 
 <body>
-    <img src="images/school_pic.png" alt="A school image">
-    <h1>Welcome to Indira National School</h1>
-    <p>Welcome to the Indira National School. We are a part of Shree Chanakya Education Society, which has a strong
-        presence on the education map of Pune. The Trust has been associated with Management education since 1994. The
-        school segment has been operational since 2004.</p>
-    <p>Today we are a full fledged CBSE affiliated school with student strength 3309 and a total staff of 226. We are
-        committed to excellence in education from KG to PG.</p>
-    <p class="boldtext"> School Timings:Afternoon Shift12:00 noon to 5:10 pm</p>
+    <img src="images/my_pic.jpg" alt="A image">
+    <h1>Welcome to First Web Page Created by Praneet !!</h1>
+    <p>Hello!! My name is Praneet Ingle, I am a student of class 8 and this is my first web page.</p>
+    <p>I study in Indira National School.</p>
+    <p>My hobbies are cycling, programming etc.</p>
+    <h2>Thanks for visiting my web page.</h2>
 
 </body>
 
